--- a/index.html
+++ b/index.html
@@ -1,12 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+ <head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;900&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="style.css" />
+  <title>Odesa</title>
+ </head>
+ <body>
+  <div class="wrapper">
+   <div class="content">
+    <div class="header">
+     <div class="video-bg">
+      <video src="sea.mp4" type="video/mp4" autoplay muted loop></video>
+      <div class="effects"></div>
+      <div class="video-bg__content">
+      <h1>Welcome to Odesa</h1>
+     <h2>Maritime city of Ukraine</h2>
+     <a href="">Read more</a>
+      </div>
+     </div>
     
-</body>
+    </div>
+   </div>
+  </div>
+ </body>
 </html>
