--- a/index.html
+++ b/index.html
@@ -21,10 +21,30 @@
       <video src="/video/sea.mp4" type="video/mp4" autoplay muted loop></video>
       <div class="effects"></div>
       <div class="video-bg__content">
+       <h5>.TRAVEL.</h5>
        <h1>Welcome to Odesa</h1>
        <h2>Maritime city of Ukraine</h2>
        <a href="">Read more</a>
       </div>
+     </div>
+    </div>
+    <div class="main">
+     <div class="photo-odesa">
+      <img src="/photos/theatre.jpg" alt="odessa theatre of opera and ballet" />
+      <p>Odesa National Academic Theater of Opera and Ballet</p>
+     </div>
+     <div class="info">
+        <h4 class="info-title">What is a must visit in Odessa?</h4>
+        <h2>Odesa Theater of Opera and Ballet</h2>
+        <p class="info-text">
+            The Odesa National Academic Opera and Ballet Theater is one of the five most beautiful theaters in the world.
+        <br/>This is the first opera house built in Ukraine.
+    <br/>Forbes magazine included the Odesa Opera among the most attractive attractions in Eastern Europe.
+
+
+
+        </p>
+
      </div>
     </div>
    </div>
