designed the main part

--- a/index.html
+++ b/index.html
@@ -29,22 +29,19 @@
      </div>
     </div>
     <div class="main">
+     <div class="info">
+      <h4>What is a must visit in Odesa?</h4>
+      <h2>Odesa Theater of Opera and Ballet</h2>
+      <p>
+       The Odesa National Academic Opera and Ballet Theater is one of the five
+       most beautiful theaters in the world.
+       <br /><br />This is the first opera house built in Ukraine. <br /><br />Forbes
+       magazine included the Odesa Opera among the most attractive attractions
+       in Eastern Europe.
+      </p>
+     </div>
      <div class="photo-odesa">
       <img src="/photos/theatre.jpg" alt="odessa theatre of opera and ballet" />
-      <p>Odesa National Academic Theater of Opera and Ballet</p>
-     </div>
-     <div class="info">
-        <h4 class="info-title">What is a must visit in Odessa?</h4>
-        <h2>Odesa Theater of Opera and Ballet</h2>
-        <p class="info-text">
-            The Odesa National Academic Opera and Ballet Theater is one of the five most beautiful theaters in the world.
-        <br/>This is the first opera house built in Ukraine.
-    <br/>Forbes magazine included the Odesa Opera among the most attractive attractions in Eastern Europe.
-
-
-
-        </p>
-
      </div>
     </div>
    </div>
